<resources>
    <string name="app_name">BizTech</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="getstarted">Get Started</string>
    <string name="clockIn">Clock In</string>
    <string name="toBreak">Go on Break</string>
    <string name="clockOut">Clock Out</string>
    <string name="welcome">Welcome!</string>
    <string name="addEmployee">Add Employee</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_reset">Reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="toGoBackToWork">End break</string>
    <string name="press_the_button_to_go_back_to_work">Clock back in from break below</string>
    <string name="press_the_button_to_go_on_break">Clock out for lunch below</string>
    <string name="toStartBreak">Start Break</string>
    <string name="break_station_title">Break Station</string>
    <string name="manager_title">Manager Area</string>
    <string name="changeLocation">Change Workplace Location</string>
    <string name="changeLocationButton">Change Location</string>
    <string name="addEmployeeTitle">Register New Employee</string>
    <string name="latLocation">Latitude</string>
    <string name="longLocation">Longitude</string>
    <string name="change_location">Change Location</string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="dob">Date of Birth</string>
    <string name="secondname">Second Name</string>
    <string name="firstname">First Name</string>
    <string name="editEmployee">Edit</string>
    <string name="editEmployeeTitle">Edit Employee Details</string>
    <string name="btn_authorize">Authorize</string>
    <string name="cancel">Cancel</string>
    <string name="enable_biometric_login">Enable Biometric Authentication</string>
    <string name="enable_biometrics">Enable Biometrics</string>
    <string name="prompt_info_title">BizTech Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="removeEmployee">Remove</string>
    <string name="removeEmployeeTitle">Remove Employee</string>
    <string name="welcome_to_biztech">Welcome to Biztech</string>
    <string name="starting_a_shift">Starting a shift?</string>
    <string name="clock_station">Clock Station</string>
    <string name="edit_employees">Edit Employees Details</string>
    <string name="add_employees">Add an Employee</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="sickYes">Yes</string>
    <string name="sickNo">No</string>
    <string name="is_employee_sick">Are you able to make work today?</string>
</resources>