<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClockInActivity">

    <!-- Clock in Page where employees can clock in,
         reset their password, and notify the manager
                   if they are sick or not -->

    <TextView
        android:id="@+id/ClockinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="90dp"
        android:text="@string/welcome_to_biztech"
        android:textColor="@color/blackOlive"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="289dp"
        android:layout_height="245dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="94dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ClockinTitle"
        app:srcCompat="@drawable/clock" />

    <Button
        android:id="@+id/button_clockin"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:layout_marginBottom="200dp"
        android:background="@color/lightBlue"
        android:text="@string/clockIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_password_reset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@color/lightBlue"
        android:padding="1dp"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/IsEmployeeSick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="65dp"
        android:text="@string/is_employee_sick"
        android:textAlignment="center"
        android:textColor="@color/blackOlive"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_password_reset" />

    <Button
        android:id="@+id/button_sick_yes"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:layout_marginBottom="4dp"
        android:background="@color/lightGreen"
        android:text="@string/sickYes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sick_no"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:layout_marginBottom="4dp"
        android:background="@color/lightRed"
        android:text="@string/sickNo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>