<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeLocationActivity">

    <!-- Change Location Page to allow manager to
         change the location of the workplace-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="471dp"
        android:layout_height="331dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="12dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_lat_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latLocation"
                android:inputType="numberDecimal|numberSigned" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_long_location"
                android:layout_width="326dp"
                android:layout_height="46dp"
                android:hint="@string/longLocation"
                android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_changeLocation"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/change_location" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="425dp"
        android:layout_height="349dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homepage" />

</androidx.constraintlayout.widget.ConstraintLayout>